# TythanAI

./: .gitignore  CONTRIBUTING.md  GHOST-2025-001-public-disclosure.md  README.md  ROADMAP.md  index.html  pyproject.toml  requirements.txt  tythanai_community_cli.py
beatforge/: electron.main.js  electron.preload.js  index.html  package-lock.json  package.json  start.bat  start.sh  tailwind.config.js
community/: policy.py  vex.py
cs2_skin_sniper/: .env.example  README.md  requirements.txt  run.py
docs/: CI.md  LAUNCH.md  tythan-demo.cast
mini-cursor/: GO-TO-MARKET.md  LICENSE  README.md  pyproject.toml
mini-cursor-vscode/: README.md  package-lock.json  package.json
mini-cursor/minicursor/: __init__.py  agent.py  checkpoints.py  cli.py  compaction.py  config.py  sca.py  security.py  tools.py  ui.py
mini-cursor/minicursor/providers/: __init__.py  anthropic_backend.py  base.py  openai_backend.py
mini-cursor/tests/: test_agent.py  test_agent_context.py  test_checkpoints.py  test_cli.py  test_compaction.py  test_provider_compaction_hooks.py  test_providers.py  test_sca.py  test_security.py  test_tools.py
monitor/: README.md  state.json  ton_monitor.py
scanners/: osv_scanner.py  semgrep_integration.py
telegram_shop_bot/: .dockerignore  .env.example  DEPLOY.md  Dockerfile  README.md  requirements.txt  run.py
tests/: test_ci_gate.py
tythan/: README.md  __init__.py  agent.py  checkpoints.py  cli.py  compaction.py  (+7 more)
tythan-code/: .gitignore  .vscodeignore  LICENSE  README.md  esbuild.js  package-lock.json  package.json  tsconfig.json  vitest.config.ts
(+128 files in other folders)
