[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mini-cursor"
version = "0.5.0"
description = "A terminal AI coding assistant (mini Cursor): chat with any model (Anthropic, OpenAI-compatible, local), let it read/edit files, search the project and run commands — with your confirmation."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "anthropic>=0.90.0",
    "openai>=1.30.0",
    "rich>=13.0.0",
    "prompt_toolkit>=3.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[project.scripts]
minicursor = "minicursor.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["minicursor*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
